--- a/styles/table.css
+++ b/styles/table.css
@@ -1,4 +1,4 @@
-body{
+body {
 	font-family: sans-serif;
 }
 
@@ -7,131 +7,145 @@ body{
 	color: white;
 }
 
-.green{
+.green {
 	background-color: green;
 	color: white;
 	text-align: center;
 	cursor: pointer;
 }
 
-.colorblind .green{
+.colorblind .green {
 	background-color: indigo;
 }
 
-.green.later{
+.green.later {
 	background-color: white !important;
 	cursor: default;
 }
 
-.green.red{
+.green.red {
 	background-color: red;
 }
 
-.colorblind .green.red{
+.colorblind .green.red {
 	background-color: limegreen;
 }
 
-.green.later .count{
-	display:none;
+.green.later .count {
+	display: none;
 }
 
-.hover.over{
+.hover.over {
 	background-color: rgba(187, 187, 187, 0.60);
 }
 
-.hover.adjhover, .hover.adjhover{
-	background-color: rgba(187, 187, 187, 0.30) /*#AAAAAA*/; 
+.hover.adjhover,
+.hover.adjhover {
+	background-color: rgba(187, 187, 187, 0.30)
+		/*#AAAAAA*/
+	;
 }
 
-.hover.selected{
-    box-shadow:0px 0px 0px 3px magenta inset;
+.hover.selected {
+	box-shadow: 0px 0px 0px 3px magenta inset;
 }
 
-th.adjhover{
-	background-color:yellow;
-	font-size:12px;
-	color:black;
+th.adjhover {
+	background-color: yellow;
+	font-size: 12px;
+	color: black;
 }
 
-.count, .hover{
+.count,
+.hover {
 	width: 100%;
 	height: 100%;
 }
 
-td a{
+td a {
 	color: white;
 }
 
-th, td{
+th,
+td {
 	min-width: 15px;
 	width: 15px;
 	height: 12px;
-	line-height:12px;
+	line-height: 12px;
 	padding: 0;
 	margin: 0;
 
-	-webkit-touch-callout: none; /* iOS Safari */		
-	-webkit-user-select: none; /* Safari */		
-	-khtml-user-select: none; /* Konqueror HTML */		
-	-moz-user-select: none; /* Firefox */		
-	-ms-user-select: none; /* Internet Explorer/Edge */		
-	user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
+	-webkit-touch-callout: none;
+	/* iOS Safari */
+	-webkit-user-select: none;
+	/* Safari */
+	-khtml-user-select: none;
+	/* Konqueror HTML */
+	-moz-user-select: none;
+	/* Firefox */
+	-ms-user-select: none;
+	/* Internet Explorer/Edge */
+	user-select: none;
+	/* Non-prefixed version, currently supported by Chrome and Opera */
 }
 
-th{
+th {
 	font-size: 11px;
 }
 
-td{
+td {
 	font-size: 8px;
 }
 
-td.axisLabel{
+td.axisLabel {
 	font-size: 13px;
 	text-align: center;
 	font-weight: bold;
 }
 
-td#vAxisLabel{
+td#vAxisLabel {
 	padding-top: 12px;
 }
 
-.vertical{
+.vertical {
 	white-space: nowrap;
 	writing-mode: tb-rl;
 }
 
-table{
+table {
 	border-collapse: collapse;
 }
 
-#scoreTable{
+#scoreTable {
 	margin: auto;
 }
 
-.hueSpectrum{
-	text-align:center;
+.hueSpectrum {
+	text-align: center;
 	font-size: 15px;
 	padding: 5px;
 	height: 20px;
 	line-height: 20px;
-	min-width: 700px;
+	width: 700px;
+	margin: 0px auto;
 }
 
-.hueSpectrum div{
-	float:left;
+.hueSpectrum div {
+	float: left;
 	padding: 1px;
 	font-weight: bold;
 }
 
-.hueColor{
+.hueColor {
 	margin: auto;
 	padding: 0;
 	width: 3px;
 	height: 20px;
-	display:inline-block;
+	display: inline-block;
 }
 
-#tableContainer{
-	text-align:center;
+#tableContainer {
+	display: flexbox;
+	justify-content: center;
+	text-align: center;
 }
